CORA-671 Java 10
New versions of maven plugins