@@ -190,7 +190,7 @@
                 <plugin>
                     <groupId>com.spotify</groupId>
                     <artifactId>docker-maven-plugin</artifactId>
-                    <version>1.0.0</version>
+                    <version>1.1.1</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -225,17 +225,17 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.18.1</version>
+                        <version>2.22.0</version>
                         <configuration>
-                            <argLine>-Xmx1G -XX:MaxPermSize=512m -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled ${jacoco.agent.ut.arg}</argLine>
+                            <argLine>-Xmx1G  -XX:+CMSClassUnloadingEnabled ${jacoco.agent.ut.arg}</argLine>
                         </configuration>
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
-                        <version>2.19.1</version>
+                        <version>2.22.0</version>
                         <configuration>
-                            <argLine>-Xmx1G -XX:MaxPermSize=512m -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled ${jacoco.agent.it.arg}</argLine>
+                            <argLine>-Xmx1G -XX:+CMSClassUnloadingEnabled ${jacoco.agent.it.arg}</argLine>
                         </configuration>
                         <executions>
                             <execution>
